--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.331.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
